GCC Bugzilla – Bug 2521
ICE in build_ptrmemfunc, at cp/typeck.c:6087
Last modified: 2003-07-25 17:33:46 UTC
g++ -g -Wall -I../CBMShared -c ecopars.cc -o ecopars.o ecopars.cc: In method `void EcocheckPars::Initialize()': ecopars.cc:18: Internal compiler error. ecopars.cc:18: Please submit a full bug report. I'm just learning the magic of templates, so the program is almost certainly incorrect, but it asked for a bug report, so I'm submitting it! When I compile it at the codesourcery site, it also gets a compiler error: ecopars.cc: In member function `void EcocheckPars::Initialize()': ecopars.cc:18: Internal compiler error in build_ptrmemfunc, at cp/typeck.c:6088 Release: cc version 2.95.2 19991024 (release) Environment: mars% uname -a SunOS mars 5.6 Generic_105181-23 sun4u sparc SUNW,Ultra-60 How-To-Repeat: g++ -g -Wall -I../CBMShared -c ecopars.cc -o ecopars.o
State-Changed-From-To: open->analyzed State-Changed-Why: confirmed as a bug
From: nathan@gcc.gnu.org To: gcc-gnats@gcc.gnu.org, nobody@gcc.gnu.org, rparnall@nrcan.gc.ca Cc: Subject: Re: c++/2521 Date: 24 Apr 2001 15:52:43 -0000 Synopsis: Internal compiler error when I compile State-Changed-From-To: open->analyzed State-Changed-By: nathan State-Changed-When: Tue Apr 24 08:52:43 2001 State-Changed-Why: confirmed as a bug http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&pr=2521&database=gcc
Responsible-Changed-From-To: unassigned->nathan Responsible-Changed-Why: patch in progress
From: nathan@gcc.gnu.org To: gcc-gnats@gcc.gnu.org, nathan@gcc.gnu.org, nobody@gcc.gnu.org, rparnall@nrcan.gc.ca Cc: Subject: Re: c++/2521 Date: 10 May 2001 09:06:03 -0000 Synopsis: Internal compiler error when I compile Responsible-Changed-From-To: unassigned->nathan Responsible-Changed-By: nathan Responsible-Changed-When: Thu May 10 02:06:03 2001 Responsible-Changed-Why: patch in progress http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&pr=2521&database=gcc
Responsible-Changed-From-To: nathan->gdr Responsible-Changed-Why: Analyzed.
State-Changed-From-To: analyzed->closed State-Changed-Why: Fixed with this: 2002-08-06 Gabriel Dos Reis <gdr@nerim.net> * typeck.c (build_x_unary_op): Handle pointer-to-member.