re PR c++/2521 (ICE in build_ptrmemfunc, at cp/typeck.c:6087)

PR C++/2521
        * typeck.c (build_x_unary_op): Handle pointer-to-member.

From-SVN: r58714